language_tests/source_files/valid/hash_runtime_seed_api_check.tr
// CHECK_ONLY

func main() {
    let k0: uint64 = std.runtime.hashSeed0()
    let k1: uint64 = std.runtime.hashSeed1()
    let folded: uint64 = k0 ^ k1
    let _keep: uint64 = folded
}
