language_tests/source_files/invalid/pointer_const_write_forbidden.tr
func main() {
    let s = "abc"
    let p: *const uint8 = std.string.stringData(s)
    p.write(65)
}
